<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/cl_dialog_error_padding"
    android:background="@drawable/bg_dialog_error">

    <TextView
        android:id="@+id/tv_dialog_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_dialog_error_title"
        android:textSize="@dimen/tv_dialog_error_message"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_dialog_error_message"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:text="@string/sample_text"
        android:textSize="@dimen/tv_dialog_error_message_size"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/tv_dialog_error_message_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_error_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_dialog_error_title"
        android:layout_marginTop="@dimen/btn_dialog_error_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_error_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
